use hashmap as temporary storage
